styles.css
body{
  display: flex;
  flex-direction: column;
  align-items: center;
  /* background: linear-gradient(170deg, #828282 0%, #4d4d4d 100%); */
  /* background: linear-gradient(170deg, #4d4d4d 0%, #3d3d3d 100%); */
  background-image: url("/assets/background.jpg");
  background-repeat: no-repeat;
  background-size: cover;
  color: white;
  width: 100%;
  min-height: 100vh;
  margin: 0;
  padding: 0;
}

.container{
  height: 100%;
  width: 100%;
  display: flex;
  flex-direction: column;
  justify-content: flex-start;
  align-items: center;
  padding-top: 20px;
  overflow: hidden;
}

/* Style the tab */
.tab {
  overflow: hidden;
  background-color: #2e2c2c;
  margin-bottom: 20px;
  width: 80%;
  max-width: 800px;
}

/* Style the buttons inside the tab */
.tab button {
  /* color: rgb(153, 153, 153);
  background-color: inherit;
  float: left;
  border: 1px solid #4d4d4d;
  outline: none; */
  cursor: pointer;
  padding: 14px 16px;
  transition: 0.3s;
}

/* Change background color of buttons on hover */
.tab button:hover {
  /* background-color: #6d6d6d; */
  color: white;
}

/* Create an active/current tablink class */
.tab button.active {
  /* background-color: #4c4c4c; */
  /* color: white; */
}

/* Style the tab content */
.tab-content {
  display: flex;
  flex-direction: column;
  align-items: center;
}

.img-wrap{
  display: flex;
  flex-direction: column;
  flex: 1;
  min-width: 350px;
}

h1,
p{
  max-width: 800px;
  padding: 0 20px;
  text-align: center;
}

.image-grid{
  display: flex;
  flex-direction: row;
  justify-content: center;
  align-items: flex-end;
  flex-wrap: wrap;
  column-gap: 40px;
  row-gap: 40px;
  margin-top: 40px;
  align-content: flex-start;
}

.canvas-wrap{
  display: flex;
  flex-direction: column;
  align-items: center;
  flex-wrap: wrap;
  position: relative;
}

.canvas-wrap .info{
  position: absolute;
  top: 0;
  right: 0;
  max-width: 95px;
  text-align: right;
  color: darkred;
}

#saveBtn{
  margin-top: 20px;
}

canvas {
  /* background-color: rgba(0, 0, 0, 0); */
  max-width: 100%;
  padding: 10px;
}

.canvas-container{
  position: relative;
  max-width: 100%;
  display: flex;
}

#draggableRotator{
  position: absolute;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
  width: 100%;
  height: 100%;
  background-color: transparent;
  border-radius: 50%;
}

#draggableRotator:hover {
  cursor: grab;
}

.chord {
  font-weight: 600;
  font-size: 20px;
}

.chord span{
  font-weight: 100;
  margin-left: 1.5px;
}

.chord .symbol{
  display: inline-block;
  transform: translateY(-5px);
}

.grid {
  display: grid;
  grid-template-columns: 50px 50px auto;
  grid-column-gap: 0px;
  grid-row-gap: 10px;
  align-items: flex-start;
  padding-left: 30px;
  margin: 40px 0 50px;
}

.grid div{
  /* height: 25px; */
}

@media only screen and (max-width: 500px){
  .tab {
    margin-bottom: 0px;
  }
  .image-grid{
    margin-top: 10px;
  }

  canvas {
    padding: 10px;
  }
  
}

